Testing new version of q1_time extracting the username before doing the agg

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -69,8 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "q1_memory - Execution Time: 34.69974064826965 seconds\n",
-      "q1_memory - Peak Memory Usage: 2980.46875 MiB\n"
+      "q1_memory - Execution Time: 33.92255616188049 seconds\n",
+      "q1_memory - Peak Memory Usage: 3009.0 MiB\n"
      ]
     }
    ],
@@ -85,6 +85,65 @@
     "\n",
     "print(f\"q1_memory - Execution Time: {end_time - start_time} seconds\")\n",
     "print(f\"q1_memory - Peak Memory Usage: {peak_memory_memory} MiB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Second version of q1_time optimizing the dataframe manipulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def q1_time_pandas_revised(file_path: str):\n",
+    "    # Load the entire dataset into a DataFrame\n",
+    "    df = pd.read_json(file_path, lines=True)\n",
+    "\n",
+    "    # Convert 'date' to datetime and extract the date\n",
+    "    df['date'] = pd.to_datetime(df['date']).dt.date\n",
+    "\n",
+    "    # Extract username from the nested 'user' dictionary\n",
+    "    df['username'] = df['user'].apply(lambda x: x['username'])\n",
+    "\n",
+    "    # Group by 'date' and count tweets, get the most active user per date\n",
+    "    top_dates_df = df.groupby('date').agg(\n",
+    "        total_tweets=('date', 'size'),\n",
+    "        most_active_user=('username', lambda x: x.mode()[0])\n",
+    "    ).sort_values('total_tweets', ascending=False).head(10)\n",
+    "\n",
+    "    # Convert to the desired format [(date, most_active_user), ...]\n",
+    "    top_dates_with_users = list(top_dates_df.itertuples(index=True, name=None))\n",
+    "\n",
+    "    return top_dates_with_users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q1_time_pandas_revised - Execution Time: 8.212636709213257 seconds\n",
+      "q1_time_pandas_revised - Peak Memory Usage: 2973.15625 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Timing and memory testing for q1_time\n",
+    "start_time = time.time()\n",
+    "peak_memory_time = max(memory_usage((q1_time_pandas_revised, (file_path,))))\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"q1_time_pandas_revised - Execution Time: {end_time - start_time} seconds\")\n",
+    "print(f\"q1_time_pandas_revised - Peak Memory Usage: {peak_memory_time} MiB\")"
    ]
   }
  ],
