--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -62,21 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "q1_memory - Execution Time: 33.92255616188049 seconds\n",
-      "q1_memory - Peak Memory Usage: 3009.0 MiB\n"
+      "[(datetime.date(2021, 2, 12), 'RanbirS00614606'), (datetime.date(2021, 2, 13), 'MaanDee08215437'), (datetime.date(2021, 2, 17), 'RaaJVinderkaur'), (datetime.date(2021, 2, 16), 'jot__b'), (datetime.date(2021, 2, 14), 'rebelpacifist'), (datetime.date(2021, 2, 18), 'neetuanjle_nitu'), (datetime.date(2021, 2, 15), 'jot__b'), (datetime.date(2021, 2, 20), 'MangalJ23056160'), (datetime.date(2021, 2, 23), 'Surrypuria'), (datetime.date(2021, 2, 19), 'Preetm91')]\n",
+      "q1_memory - Execution Time: 34.3178768157959 seconds\n",
+      "q1_memory - Peak Memory Usage: 3126.28125 MiB\n"
      ]
     }
    ],
    "source": [
     "#Executing q1_time_pandas and printing the result\n",
     "top_dates = q1_time_pandas(file_path)\n",
+    "print(top_dates)\n",
     "\n",
     "# Timing and memory testing for q1_memory\n",
     "start_time = time.time()\n",
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
     "    top_dates_df = df.groupby('date').agg(\n",
     "        total_tweets=('date', 'size'),\n",
     "        most_active_user=('username', lambda x: x.mode()[0])\n",
-    "    ).sort_values('total_tweets', ascending=False).head(10)\n",
+    "    ).sort_values('total_tweets', ascending=False).head(10).drop(columns=['total_tweets'])\n",
     "\n",
     "    # Convert to the desired format [(date, most_active_user), ...]\n",
     "    top_dates_with_users = list(top_dates_df.itertuples(index=True, name=None))\n",
@@ -124,19 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "q1_time_pandas_revised - Execution Time: 8.212636709213257 seconds\n",
-      "q1_time_pandas_revised - Peak Memory Usage: 2973.15625 MiB\n"
+      "[(datetime.date(2021, 2, 12), 'RanbirS00614606'), (datetime.date(2021, 2, 13), 'MaanDee08215437'), (datetime.date(2021, 2, 17), 'RaaJVinderkaur'), (datetime.date(2021, 2, 16), 'jot__b'), (datetime.date(2021, 2, 14), 'rebelpacifist'), (datetime.date(2021, 2, 18), 'neetuanjle_nitu'), (datetime.date(2021, 2, 15), 'jot__b'), (datetime.date(2021, 2, 20), 'MangalJ23056160'), (datetime.date(2021, 2, 23), 'Surrypuria'), (datetime.date(2021, 2, 19), 'Preetm91')]\n",
+      "q1_time_pandas_revised - Execution Time: 7.779937028884888 seconds\n",
+      "q1_time_pandas_revised - Peak Memory Usage: 3133.21484375 MiB\n"
      ]
     }
    ],
    "source": [
+    "#Executing q1_time_pandas and printing the result\n",
+    "top_dates = q1_time_pandas_revised(file_path)\n",
+    "print(top_dates)\n",
+    "\n",
     "# Timing and memory testing for q1_time\n",
     "start_time = time.time()\n",
     "peak_memory_time = max(memory_usage((q1_time_pandas_revised, (file_path,))))\n",
