Updated challenge.ipynb with the q1_memory read line by line solution

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +70,8 @@
      "output_type": "stream",
      "text": [
       "[(datetime.date(2021, 2, 12), 'RanbirS00614606'), (datetime.date(2021, 2, 13), 'MaanDee08215437'), (datetime.date(2021, 2, 17), 'RaaJVinderkaur'), (datetime.date(2021, 2, 16), 'jot__b'), (datetime.date(2021, 2, 14), 'rebelpacifist'), (datetime.date(2021, 2, 18), 'neetuanjle_nitu'), (datetime.date(2021, 2, 15), 'jot__b'), (datetime.date(2021, 2, 20), 'MangalJ23056160'), (datetime.date(2021, 2, 23), 'Surrypuria'), (datetime.date(2021, 2, 19), 'Preetm91')]\n",
-      "q1_memory - Execution Time: 34.3178768157959 seconds\n",
-      "q1_memory - Peak Memory Usage: 3126.28125 MiB\n"
+      "q1_memory - Execution Time: 33.76640963554382 seconds\n",
+      "q1_memory - Peak Memory Usage: 2968.328125 MiB\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,14 +119,14 @@
     "    ).sort_values('total_tweets', ascending=False).head(10).drop(columns=['total_tweets'])\n",
     "\n",
     "    # Convert to the desired format [(date, most_active_user), ...]\n",
-    "    top_dates_with_users = list(top_dates_df.itertuples(index=True, name=None))\n",
+    "    top_dates = list(top_dates_df.itertuples(index=True, name=None))\n",
     "\n",
-    "    return top_dates_with_users"
+    "    return top_dates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +134,8 @@
      "output_type": "stream",
      "text": [
       "[(datetime.date(2021, 2, 12), 'RanbirS00614606'), (datetime.date(2021, 2, 13), 'MaanDee08215437'), (datetime.date(2021, 2, 17), 'RaaJVinderkaur'), (datetime.date(2021, 2, 16), 'jot__b'), (datetime.date(2021, 2, 14), 'rebelpacifist'), (datetime.date(2021, 2, 18), 'neetuanjle_nitu'), (datetime.date(2021, 2, 15), 'jot__b'), (datetime.date(2021, 2, 20), 'MangalJ23056160'), (datetime.date(2021, 2, 23), 'Surrypuria'), (datetime.date(2021, 2, 19), 'Preetm91')]\n",
-      "q1_time_pandas_revised - Execution Time: 7.779937028884888 seconds\n",
-      "q1_time_pandas_revised - Peak Memory Usage: 3133.21484375 MiB\n"
+      "q1_time_pandas_revised - Execution Time: 7.851444482803345 seconds\n",
+      "q1_time_pandas_revised - Peak Memory Usage: 2991.9140625 MiB\n"
      ]
     }
    ],
@@ -151,6 +151,79 @@
     "\n",
     "print(f\"q1_time_pandas_revised - Execution Time: {end_time - start_time} seconds\")\n",
     "print(f\"q1_time_pandas_revised - Peak Memory Usage: {peak_memory_time} MiB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First version of q1_memory using line by line reading and abandoning pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def q1_memory(file_path: str):\n",
+    "    tweet_counts = Counter()\n",
+    "    user_activity = defaultdict(Counter)\n",
+    "\n",
+    "    # Read and process the JSON file\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            tweet = json.loads(line)\n",
+    "            date = datetime.fromisoformat(tweet['date']).date()\n",
+    "            username = tweet['user']['username']\n",
+    "\n",
+    "            # Count tweets per date and track user activity\n",
+    "            tweet_counts[date] += 1\n",
+    "            user_activity[date][username] += 1\n",
+    "\n",
+    "    # Identify top 10 dates\n",
+    "    top_dates = tweet_counts.most_common(10)\n",
+    "\n",
+    "    # Find the most active user for each top date\n",
+    "    top_dates = [(date, user_activity[date].most_common(1)[0][0]) for date, _ in top_dates]\n",
+    "\n",
+    "    return top_dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(datetime.date(2021, 2, 12), 'RanbirS00614606'), (datetime.date(2021, 2, 13), 'MaanDee08215437'), (datetime.date(2021, 2, 17), 'RaaJVinderkaur'), (datetime.date(2021, 2, 16), 'jot__b'), (datetime.date(2021, 2, 14), 'rebelpacifist'), (datetime.date(2021, 2, 18), 'neetuanjle_nitu'), (datetime.date(2021, 2, 15), 'jot__b'), (datetime.date(2021, 2, 20), 'MangalJ23056160'), (datetime.date(2021, 2, 23), 'Surrypuria'), (datetime.date(2021, 2, 19), 'Preetm91')]\n",
+      "q1_memory - Execution Time: 3.816939115524292 seconds\n",
+      "q1_memory - Peak Memory Usage: 59.87109375 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Executing q1_time_pandas and printing the result\n",
+    "top_dates = q1_memory(file_path)\n",
+    "print(top_dates)\n",
+    "\n",
+    "# Timing and memory testing for q1_memory\n",
+    "start_time = time.time()\n",
+    "peak_memory_memory = max(memory_usage((q1_memory, (file_path,))))\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"q1_memory - Execution Time: {end_time - start_time} seconds\")\n",
+    "print(f\"q1_memory - Peak Memory Usage: {peak_memory_memory} MiB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### q1_memory test with"
    ]
   }
  ],
