First approach to Q2 with pandas

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +27,20 @@
     "import time\n",
     "import datetime\n",
     "import memory_profiler\n",
+    "import re\n",
     "#import concurrent\n",
     "\n",
     "from datetime import datetime\n",
     "from memory_profiler import memory_usage\n",
     "from collections import defaultdict, Counter\n",
     "#from concurrent.futures import ProcessPoolExecutor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q1 Time and Memory solution"
    ]
   },
   {
@@ -223,7 +238,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q1_memory test with"
+    "## Q2 Time and Memory solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q2 Pandas approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def q2_pandas(file_path: str):\n",
+    "    # Define the emoji pattern\n",
+    "    emoji_pattern = re.compile('[\\U0001F600-\\U0001F64F]')\n",
+    "\n",
+    "    # Load the dataset into a DataFrame\n",
+    "    df = pd.read_json(file_path, lines=True)\n",
+    "\n",
+    "    # Extract emojis from the 'content' field\n",
+    "    df['emojis'] = df['content'].apply(lambda x: emoji_pattern.findall(x))\n",
+    "\n",
+    "    # Explode the DataFrame to have one emoji per row\n",
+    "    df_emojis = df.explode('emojis')\n",
+    "\n",
+    "    # Count the occurrences of each emoji and get the top 10\n",
+    "    top_emojis = df_emojis['emojis'].value_counts().head(10)\n",
+    "\n",
+    "    return top_emojis.reset_index().rename(columns={'index': 'emoji', 'emojis': 'count'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   count  count\n",
+      "0      🙏   7286\n",
+      "1      😂   3072\n",
+      "2      😡    378\n",
+      "3      😁    280\n",
+      "4      😊    259\n",
+      "5      😢    225\n",
+      "6      🙄    219\n",
+      "7      🙌    215\n",
+      "8      😀    213\n",
+      "9      😜    202\n",
+      "q2_pandas - Execution Time: 8.467584133148193 seconds\n",
+      "q2_pandas - Peak Memory Usage: 3089.48828125 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Executing q2_pandas and printing the result\n",
+    "top_emojis_df = q2_pandas(file_path)\n",
+    "print(top_emojis_df)\n",
+    "# Timing and memory testing for q1_memory\n",
+    "start_time = time.time()\n",
+    "peak_memory_memory = max(memory_usage((q2_pandas, (file_path,))))\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"q2_pandas - Execution Time: {end_time - start_time} seconds\")\n",
+    "print(f\"q2_pandas - Peak Memory Usage: {peak_memory_memory} MiB\")"
    ]
   }
  ],
