Added new q2_time to the challenge notebook

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "import datetime\n",
     "import memory_profiler\n",
     "import re\n",
+    "from typing import List, Tuple\n",
     "#import concurrent\n",
     "\n",
     "from datetime import datetime\n",
@@ -250,11 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def q2_pandas(file_path: str):\n",
+    "def q2_pandas(file_path: str) -> List[Tuple[str, int]]:\n",
     "    # Define the emoji pattern\n",
     "    emoji_pattern = re.compile('[\\U0001F600-\\U0001F64F]')\n",
     "\n",
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -293,8 +294,8 @@
       "7      🙌    215\n",
       "8      😀    213\n",
       "9      😜    202\n",
-      "q2_pandas - Execution Time: 8.467584133148193 seconds\n",
-      "q2_pandas - Peak Memory Usage: 3089.48828125 MiB\n"
+      "q2_pandas - Execution Time: 8.545934915542603 seconds\n",
+      "q2_pandas - Peak Memory Usage: 3149.39453125 MiB\n"
      ]
     }
    ],
@@ -309,6 +310,62 @@
     "\n",
     "print(f\"q2_pandas - Execution Time: {end_time - start_time} seconds\")\n",
     "print(f\"q2_pandas - Peak Memory Usage: {peak_memory_memory} MiB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q2 Time, using regex to reduce the execution time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def q2_time(file_path: str) -> List[Tuple[str, int]]:\n",
+    "    emoji_counter = Counter()\n",
+    "    emoji_pattern = re.compile('[\\U0001F600-\\U0001F64F]')  #This is the REGEX pattern for emojis\n",
+    "\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            tweet = json.loads(line)\n",
+    "            content = tweet.get('content', '')\n",
+    "            emojis = emoji_pattern.findall(content)\n",
+    "            emoji_counter.update(emojis)\n",
+    "\n",
+    "    top_emojis = emoji_counter.most_common(10)\n",
+    "    return top_emojis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('🙏', 7286), ('😂', 3072), ('😡', 378), ('😁', 280), ('😊', 259), ('😢', 225), ('🙄', 219), ('🙌', 215), ('😀', 213), ('😜', 202)]\n",
+      "q2_time - Execution Time: 3.7983992099761963 seconds\n",
+      "q2_time - Peak Memory Usage: 461.17578125 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Executing q2_time and printing the result\n",
+    "top_emojis_df = q2_time(file_path)\n",
+    "print(top_emojis_df)\n",
+    "# Timing and memory testing for q1_memory\n",
+    "start_time = time.time()\n",
+    "peak_memory_memory = max(memory_usage((q2_time, (file_path,))))\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"q2_time - Execution Time: {end_time - start_time} seconds\")\n",
+    "print(f\"q2_time - Peak Memory Usage: {peak_memory_memory} MiB\")"
    ]
   }
  ],
