Added a quick fix for the tuple -> list conversion

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -357,8 +357,8 @@
    ],
    "source": [
     "#Executing q2_time and printing the result\n",
-    "top_emojis_df = q2_time(file_path)\n",
-    "print(top_emojis_df)\n",
+    "top_emojis = q2_time(file_path)\n",
+    "print(top_emojis)\n",
     "# Timing and memory testing for q1_memory\n",
     "start_time = time.time()\n",
     "peak_memory_memory = max(memory_usage((q2_time, (file_path,))))\n",
