HOTFIX: fix in how the file is loaded, both in the .ipynb and the .py file

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -321,20 +321,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "def q2_time(file_path: str) -> List[Tuple[str, int]]:\n",
     "    emoji_counter = Counter()\n",
-    "    emoji_pattern = re.compile('[\\U0001F600-\\U0001F64F]')  #This is the REGEX pattern for emojis\n",
+    "    emoji_pattern = re.compile('[\\U0001F600-\\U0001F64F]')  # Basic emoji pattern\n",
     "\n",
     "    with open(file_path, 'r') as file:\n",
-    "        for line in file:\n",
-    "            tweet = json.loads(line)\n",
-    "            content = tweet.get('content', '')\n",
-    "            emojis = emoji_pattern.findall(content)\n",
-    "            emoji_counter.update(emojis)\n",
+    "        data = file.readlines()\n",
+    "\n",
+    "    for line in data:\n",
+    "        tweet = json.loads(line)\n",
+    "        content = tweet.get('content', '')\n",
+    "        emojis = emoji_pattern.findall(content)\n",
+    "        emoji_counter.update(emojis)\n",
     "\n",
     "    top_emojis = emoji_counter.most_common(10)\n",
     "    return top_emojis"
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -350,8 +352,8 @@
      "output_type": "stream",
      "text": [
       "[('🙏', 7286), ('😂', 3072), ('😡', 378), ('😁', 280), ('😊', 259), ('😢', 225), ('🙄', 219), ('🙌', 215), ('😀', 213), ('😜', 202)]\n",
-      "q2_time - Execution Time: 3.7983992099761963 seconds\n",
-      "q2_time - Peak Memory Usage: 461.17578125 MiB\n"
+      "q2_time - Execution Time: 4.186179161071777 seconds\n",
+      "q2_time - Peak Memory Usage: 532.83984375 MiB\n"
      ]
     }
    ],
