--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -352,8 +352,8 @@
      "output_type": "stream",
      "text": [
       "[('🙏', 7286), ('😂', 3072), ('😡', 378), ('😁', 280), ('😊', 259), ('😢', 225), ('🙄', 219), ('🙌', 215), ('😀', 213), ('😜', 202)]\n",
-      "q2_time - Execution Time: 4.186179161071777 seconds\n",
-      "q2_time - Peak Memory Usage: 532.83984375 MiB\n"
+      "q2_time - Execution Time: 3.7877962589263916 seconds\n",
+      "q2_time - Peak Memory Usage: 605.49609375 MiB\n"
      ]
     }
    ],
@@ -368,6 +368,63 @@
     "\n",
     "print(f\"q2_time - Execution Time: {end_time - start_time} seconds\")\n",
     "print(f\"q2_time - Peak Memory Usage: {peak_memory_memory} MiB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q2 Memory avoiding loading the whole file, now reading line by line searching for the emojis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def q2_memory(file_path: str) -> List[Tuple[str, int]]:\n",
+    "    emoji_counter = Counter()\n",
+    "    emoji_pattern = re.compile('[\\U0001F600-\\U0001F64F]')  # Basic emoji pattern\n",
+    "\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            tweet = json.loads(line)\n",
+    "            content = tweet.get('content', '')\n",
+    "            emojis = emoji_pattern.findall(content)\n",
+    "            for emoji in emojis:\n",
+    "                emoji_counter[emoji] += 1\n",
+    "\n",
+    "    top_emojis = emoji_counter.most_common(10)\n",
+    "    return top_emojis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('🙏', 7286), ('😂', 3072), ('😡', 378), ('😁', 280), ('😊', 259), ('😢', 225), ('🙄', 219), ('🙌', 215), ('😀', 213), ('😜', 202)]\n",
+      "q2_memory - Execution Time: 3.8695602416992188 seconds\n",
+      "q2_memory - Peak Memory Usage: 551.01953125 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Executing q2_memory and printing the result\n",
+    "top_emojis = q2_memory(file_path)\n",
+    "print(top_emojis)\n",
+    "# Timing and memory testing for q1_memory\n",
+    "start_time = time.time()\n",
+    "peak_memory_memory = max(memory_usage((q2_memory, (file_path,))))\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"q2_memory - Execution Time: {end_time - start_time} seconds\")\n",
+    "print(f\"q2_memory - Peak Memory Usage: {peak_memory_memory} MiB\")"
    ]
   }
  ],
