Q3 Time and memory implementation, release candidate waiting for the notebook to be finished

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Established file path before code execution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,6 +432,140 @@
     "\n",
     "print(f\"q2_memory - Execution Time: {end_time - start_time} seconds\")\n",
     "print(f\"q2_memory - Peak Memory Usage: {peak_memory_memory} MiB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q3 Time and Memory solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q3 Time solution approach with Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def q3_time(file_path: str):\n",
+    "    # Read the entire file into a Pandas DataFrame\n",
+    "    df = pd.read_json(file_path, lines=True)\n",
+    "\n",
+    "    # Regular expression to extract mentions\n",
+    "    mention_pattern = re.compile(r'@(\\w+)')\n",
+    "\n",
+    "    # Extract mentions and explode the DataFrame\n",
+    "    df['mentions'] = df['content'].str.findall(mention_pattern)\n",
+    "    df_exploded = df.explode('mentions')\n",
+    "\n",
+    "    # Count and get the top 10 mentions\n",
+    "    top_mentions = df_exploded['mentions'].value_counts().head(10)\n",
+    "\n",
+    "    return top_mentions.reset_index().rename(columns={'index': 'username', 'mentions': 'count'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             count  count\n",
+      "0     narendramodi   2261\n",
+      "1  Kisanektamorcha   1836\n",
+      "2  RakeshTikaitBKU   1639\n",
+      "3         PMOIndia   1422\n",
+      "4      RahulGandhi   1125\n",
+      "5    GretaThunberg   1046\n",
+      "6      RaviSinghKA   1015\n",
+      "7          rihanna    972\n",
+      "8    UNHumanRights    962\n",
+      "9      meenaharris    925\n",
+      "q3_time - Execution Time: 9.352441787719727 seconds\n",
+      "q3_time - Peak Memory Usage: 3258.234375 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Executing q3_time and printing the result\n",
+    "top_mentions = q3_time(file_path)\n",
+    "print(top_mentions)\n",
+    "# Timing and memory testing for q1_memory\n",
+    "start_time = time.time()\n",
+    "peak_memory_memory = max(memory_usage((q3_time, (file_path,))))\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"q3_time - Execution Time: {end_time - start_time} seconds\")\n",
+    "print(f\"q3_time - Peak Memory Usage: {peak_memory_memory} MiB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q3 Memory solution, uses the already proved line by line reading of the json file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def q3_memory(file_path: str):\n",
+    "    mention_counter = Counter()\n",
+    "    mention_pattern = re.compile(r'@(\\w+)')\n",
+    "\n",
+    "    # Process file line by line\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            tweet = json.loads(line)\n",
+    "            mentions = mention_pattern.findall(tweet.get('content', ''))\n",
+    "            for mention in mentions:\n",
+    "                mention_counter[mention] += 1\n",
+    "\n",
+    "    # Get the top 10 mentions\n",
+    "    top_mentions = mention_counter.most_common(10)\n",
+    "\n",
+    "    return [(mention, count) for mention, count in top_mentions]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('narendramodi', 2261), ('Kisanektamorcha', 1836), ('RakeshTikaitBKU', 1639), ('PMOIndia', 1422), ('RahulGandhi', 1125), ('GretaThunberg', 1046), ('RaviSinghKA', 1015), ('rihanna', 972), ('UNHumanRights', 962), ('meenaharris', 925)]\n",
+      "q3_memory - Execution Time: 3.9572689533233643 seconds\n",
+      "q3_memory - Peak Memory Usage: 1906.41796875 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Executing q3_memory and printing the result\n",
+    "top_mentions = q3_memory(file_path)\n",
+    "print(top_mentions)\n",
+    "# Timing and memory testing for q1_memory\n",
+    "start_time = time.time()\n",
+    "peak_memory_memory = max(memory_usage((q3_memory, (file_path,))))\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"q3_memory - Execution Time: {end_time - start_time} seconds\")\n",
+    "print(f\"q3_memory - Peak Memory Usage: {peak_memory_memory} MiB\")"
    ]
   }
  ],
