--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q2 Time, using regex to reduce the execution time"
+    "### Q2 Time, dejando de usar pandas, lectura del archivo completo con la libreria json"
    ]
   },
   {
@@ -491,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q2 Memory avoiding loading the whole file, now reading line by line searching for the emojis"
+    "### Q2 Memory evitando cargar el archivo completo, se usa lectura linea por linea para buscar los emojis por cada tweet"
    ]
   },
   {
@@ -562,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q3 Time and Memory solution"
+    "## Q3 Time and Memory solucion"
    ]
   },
   {
@@ -576,7 +576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q3 Time solution approach with Pandas"
+    "### Q3 Time solucion con Pandas"
    ]
   },
   {
@@ -644,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q3 Memory solution, uses the already proved line by line reading of the json file"
+    "### Q3 Memory solucion, usa el metodo de lectura linea por linea del JSON usado anteriormente"
    ]
   },
   {
